--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <title>js-coding</title>
 </head>
 <body>
-
-    <h1 class="result">Alisher oka ozgina sabr qling</h1>
+<!-- 
+    <h1 class="result">Alisher oka ozgina sabr qling</h1> -->
     <script src="js/main.js"></script>
 </body>
 </html>
