problem js code

--- a/index.html
+++ b/index.html
@@ -7,8 +7,16 @@
     <title>js-coding</title>
 </head>
 <body>
-<!-- 
-    <h1 class="result">Alisher oka ozgina sabr qling</h1> -->
+
+    <h1 class="result"><!-- Alisher oka ozgina sabr qling -->Java Script</h1>
+
+    <form class="form"  action="#">
+        <input class="form__uzs-input" required min="0" type="number">
+        <button type="submit">Convert</button>
+    </form>
+    <output class="usd-result">USD</output>
+    <output class="eur-result">EUR</output>
+    <output class="rub-result">RUB</output>
     <script src="js/main.js"></script>
 </body>
 </html>
