--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
         <input class="form__uzs-input" required min="0" type="number">
         <button type="submit">Convert</button>
     </form>
-    <output class="usd-result">USD</output>
-    <output class="eur-result">EUR</output>
-    <output class="rub-result">RUB</output>
+    <output class="usd-result">USD:</output>
+    <output class="eur-result">EUR:</output>
+    <output class="rub-result">RUB:</output>
     <script src="js/main.js"></script>
 </body>
 </html>
