js object complate

--- a/index.html
+++ b/index.html
@@ -5,18 +5,26 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>js-coding</title>
+    <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
 
-    <h1 class="result"><!-- Alisher oka ozgina sabr qling -->Java Script</h1>
+<!--   <h1 class="result"> Alisher oka ozgina sabr qling  Java Script</h1> -->
 
-    <form class="form"  action="#">
+    <!-- <form class="form"  action="#">
         <input class="form__uzs-input" required min="0" type="number">
         <button type="submit">Convert</button>
     </form>
     <output class="usd-result">USD:</output>
     <output class="eur-result">EUR:</output>
-    <output class="rub-result">RUB:</output>
+    <output class="rub-result">RUB:</output> -->
+
+
+
+    <div class="container">
+        <div class="content"></div>
+    </div>
+    <div class="wrapper"></div>
     <script src="js/main.js"></script>
 </body>
 </html>
