--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,17 +8,18 @@
     <title>js-coding</title>
     <link rel="stylesheet" href="css/main.css">
 </head>
+
 <body>
 
-<!--   <h1 class="result"> Alisher oka ozgina sabr qling  Java Script</h1> -->
+    <!--   <h1 class="result"> Alisher oka ozgina sabr qling  Java Script</h1> -->
 
-    <!-- <form class="form"  action="#">
+    <form class="form" action="#">
         <input class="form__uzs-input" required min="0" type="number">
         <button type="submit">Convert</button>
     </form>
     <output class="usd-result">USD:</output>
     <output class="eur-result">EUR:</output>
-    <output class="rub-result">RUB:</output> -->
+    <output class="rub-result">RUB:</output>
 
 
 
@@ -25,6 +27,9 @@
         <div class="content"></div>
     </div>
     <div class="wrapper"></div>
+    <!--     <script src="js/form.js"></script>
+ -->
     <script src="js/main.js"></script>
 </body>
+
 </html>
