--- a/index.html
+++ b/index.html
@@ -13,23 +13,25 @@
 
     <!--   <h1 class="result"> Alisher oka ozgina sabr qling  Java Script</h1> -->
 
-    <form class="form" action="#">
+<!--   <form class="form" action="#">
         <input class="form__uzs-input" required min="0" type="number">
         <button type="submit">Convert</button>
     </form>
     <output class="usd-result">USD:</output>
     <output class="eur-result">EUR:</output>
-    <output class="rub-result">RUB:</output>
+    <output class="rub-result">RUB:</output> -->
 
 
 
     <div class="container">
-        <div class="content"></div>
+        <ul class="cars">
+        </ul>
     </div>
-    <div class="wrapper"></div>
-    <!--     <script src="js/form.js"></script>
- -->
+    <!-- <div class="wrapper"></div> -->
+        
+    <div class="content"></div>
     <script src="js/main.js"></script>
+<!--     <script src="js/ayyorlaR.JS"></script> -->
 </body>
 
 </html>
